--- a/物流/ui/sidebar.ui
+++ b/物流/ui/sidebar.ui
@@ -363,7 +363,7 @@
        <item>
         <widget class="QStackedWidget" name="stackedWidget">
          <property name="currentIndex">
-          <number>1</number>
+          <number>6</number>
          </property>
          <widget class="QWidget" name="page">
           <layout class="QGridLayout" name="gridLayout_2">
@@ -535,28 +535,28 @@
          <widget class="QWidget" name="page_7">
           <layout class="QGridLayout" name="gridLayout_8">
            <item row="1" column="0">
-            <widget class="QPushButton" name="pushButton_2">
+            <widget class="QPushButton" name="user_add_btn">
              <property name="text">
               <string>新增</string>
              </property>
             </widget>
            </item>
            <item row="1" column="1">
-            <widget class="QPushButton" name="pushButton_4">
+            <widget class="QPushButton" name="user_del_btn">
              <property name="text">
               <string>删除</string>
              </property>
             </widget>
            </item>
            <item row="1" column="2">
-            <widget class="QPushButton" name="pushButton_3">
+            <widget class="QPushButton" name="user_save_btn">
              <property name="text">
               <string>保存</string>
              </property>
             </widget>
            </item>
            <item row="0" column="0" colspan="3">
-            <widget class="QTableWidget" name="tableWidget">
+            <widget class="QTableWidget" name="table_users">
              <column>
               <property name="text">
                <string notr="true">id</string>
