--- a/物流/ui/sidebar.ui
+++ b/物流/ui/sidebar.ui
@@ -474,7 +474,7 @@ color: rgb(255, 255, 255);</string>
             </widget>
            </item>
            <item row="0" column="0" colspan="2">
-            <widget class="QTableWidget" name="tableWidget_2">
+            <widget class="QTableWidget" name="table_import_exceldata">
              <column>
               <property name="text">
                <string>任务单号</string>
